--- a/EntitiesSistema/EntitiesDTO/EntitiesDTO.csproj
+++ b/EntitiesSistema/EntitiesDTO/EntitiesDTO.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EntitiesSistema\EntitiesSistema.csproj" />
+  </ItemGroup>
+
 </Project>
