--- a/Sistema/SistemaData/SistemaData.csproj
+++ b/Sistema/SistemaData/SistemaData.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EntitiesSistema\EntitiesSistema\EntitiesSistema.csproj" />
+    <ProjectReference Include="..\EntitiesSistema\EntitiesSistema\SistemaEntities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
