--- a/Sistema/SistemaWebApi/SistemaWebApi.csproj
+++ b/Sistema/SistemaWebApi/SistemaWebApi.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EntitiesDTO\EntitiesDTO.csproj" />
+    <ProjectReference Include="..\EntitiesDTO\SistemaDTO.csproj" />
     <ProjectReference Include="..\SistemaService\SistemaService.csproj" />
   </ItemGroup>
 
