--- a/SistemaServices/SistemaServices.csproj
+++ b/SistemaServices/SistemaServices.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaData\SistemaData.csproj" />
+    <ProjectReference Include="..\SistemaDTO\SistemaDTO.csproj" />
+    <ProjectReference Include="..\SistemaEntities\SistemaEntities.csproj" />
+  </ItemGroup>
+
 </Project>
