--- a/SistemaWebApi/SistemaWebApi.csproj
+++ b/SistemaWebApi/SistemaWebApi.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaDTO\SistemaDTO.csproj" />
+    <ProjectReference Include="..\SistemaServices\SistemaServices.csproj" />
+  </ItemGroup>
+
 </Project>
