--- a/SistemaWebApi/SistemaWebApi.csproj
+++ b/SistemaWebApi/SistemaWebApi.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SistemaDTO\SistemaDTO.csproj" />
     <ProjectReference Include="..\SistemaServices\SistemaServices.csproj" />
   </ItemGroup>
