--- a/SistemaTest/SistemaTest.csproj
+++ b/SistemaTest/SistemaTest.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SistemaDTO\SistemaDTO.csproj" />
+    <ProjectReference Include="..\SistemaData\SistemaData.csproj" />
     <ProjectReference Include="..\SistemaServices\SistemaServices.csproj" />
   </ItemGroup>
 
