--- a/SistemaTest/SistemaTest.csproj
+++ b/SistemaTest/SistemaTest.csproj
@@ -26,4 +26,10 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ClienteTest.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
 </Project>
